--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Nishita Baruah</title>
+  <title>Nishita Baruah Singh</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -205,7 +205,7 @@
   <p style="text-align: center; max-width: 700px; margin: auto; font-size: 18px; transition: all 0.3s ease;"
      onmouseover="this.style.transform='scale(1.03)'; this.style.color='#b1366b';"
      onmouseout="this.style.transform='scale(1)'; this.style.color='#4a4a4a';">
-    Nishita Singh is a dynamic, graceful, and inspiring individual who believes in living life with passion and purpose. 
+    Nishita Baruah Singh is a dynamic, graceful, and inspiring individual who believes in living life with passion and purpose. 
     With a heart full of empathy and a mind full of ideas, she blends strength with softness in everything she does.
   </p>
 </section>
@@ -247,11 +247,12 @@
 </section>
 
 <footer>
-  © 2025 Nishita Singh. All rights reserved.
+  © 2025 Nishita Baruah Singh. All rights reserved.
 </footer>
 
 </body>
 </html>
+
 
 
 
