--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <body>
 
 <header>
-  <h1>Nishita Brahua</h1>
+  <h1>Nishita Baruah Singh</h1>
   <p>"Empowered. Elegant. Unstoppable."</p>
 </header>
 
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
